--- a/bubble.html
+++ b/bubble.html
@@ -6,7 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Bubble</title>
 </head>
-<body>
-    <h2>Event Bubble</h2>
+<body style="background-color: limegreen;">
+    <main>
+        <h2>Event Bubble</h2>
+        <section id="section-container">
+            <h4>Bubble List</h4>
+            <ul id="list-container">
+                <li class="item">Lorem, ipsum.</li>
+                <li id="second-item" class="item">A, quisquam.</li>
+                <li class="item">Corporis, adipisci?</li>
+                <li class="item">Aperiam, et?</li>
+                <li class="item">Dignissimos, fugit!</li>
+                <li class="item">Sint, possimus.</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+    <script src="js/bubble.js"></script>
 </body>
 </html>
